src/less/blocks/user_box.less
/*
 This file is a part of libertysoil.org website
 Copyright (C) 2015  Loki Education (Social Enterprise)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Affero General Public License for more details.

 You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
.user_box {
  &:extend(.font-open_sans);
  display: flex;
  align-items: center;
  border: none;
  font-size: 12px;

  &-small {
    font-size: 11px;
  }

  &__name {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    display: flex;

    a {
      display: inline-block;
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
      border: none;
    }
  }

  &__body {
    flex: 1;
    display: flex;
    &:extend(.layout-rows);

    .user_box__avatar + & {
      margin-left: 6px;
    }
  }

  &__avatar {
    display: block;
    border-radius: 2px;
    overflow: hidden;
    border: none;
    flex: none;

    img {
      display: block;
    }

    &-round {
      border-radius: 50%;
    }
  }

  &__edit_avatar {
    margin: 5px 0 0 -73px;
    overflow: hidden;
    button {
      background: none;
      border: none;
    }
    .micon {
      font-size: 30px;
    }
    &:hover {
      .micon {
        color: #eee;
      }
    }
  }

  &__text {
    font-size: @font__size-small;

    a {
      border: none;
    }
  }
}

